--- a/ICE (2).html
+++ b/ICE (2).html
@@ -11,7 +11,7 @@
     </head>
     <body>
       <div class="background2">
-        <br>   <h2 style="text-align: center;"> <b>Non-Veg items</b> </h2><br>
+        <br>   <h2 style="text-align: center;"> <b>ICE CREAMS</b> </h2><br>
    <div class="container">
    <div id="Carousel" class="carousel slide" data-ride="carousel">
    <ol class="carousel-indicators">
@@ -40,7 +40,7 @@
    </a>
    </div>
    </div>
-        <h1>Cold Beverages</h1>
+        <h1>ICE CREAMS ARE GOOD FOR HEALTH </h1>
         
         <section class="items">
           <div class="item">
