--- a/pizza.html
+++ b/pizza.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ice creams</title>
+    <title>PIZZA</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
     </head>
     <body>
       <div class="background2">
-        <br>   <h2 style="text-align: center;"> <b>Non-Veg items</b> </h2><br>
+        <br>   <h2 style="text-align: center;"> <b>PIZZA</b> </h2><br>
    <div class="container">
    <div id="Carousel" class="carousel slide" data-ride="carousel">
    <ol class="carousel-indicators">
@@ -40,7 +40,7 @@
    </a>
    </div>
    </div>
-        <h1>Cold Beverages</h1>
+        <h1>EAT YOUR FAVORITE PIZZA IN LESS PRICES </h1>
         
         <section class="items">
           <div class="item">
